2002-07-31  Zbigniew Chyla  <cyba@gnome.pl>

	* src/gnumeric-gconf-priv.h: removed PLUGIN_GCONF_KNOWN

	* src/gnumeric-gconf.[ch]
	(gnm_gconf_get_known_plugins, gnm_gconf_set_known_plugins): removed

	* src/gutils.h
	(g_string_s]list_copy): added cast to GnmMapFunc
	(GNM_[S]LIST_APPEND): new
	(GNM_SIZEOF_ARRAY): cast to int, unsigned ints are evil

	* src/plugin-loader.c
	(gnumeric_plugin_loader_unload_service_general_real,
	gnumeric_plugin_loader_unload_service_file_opener_real,
	gnumeric_plugin_loader_unload_service_file_saver_real,
	gnumeric_plugin_loader_unload_service_function_group_real,
	gnumeric_plugin_loader_unload_service_plugin_loader_real):
	made static

	* src/plugin.[ch]
	(struct _GnmPlugin): added saved_textdomain
	(gnm_plugin_init): set saved_textdomain to NULL
	(gnm_plugin_finalize): g_free it here
	(gnm_plugin_get_config_prefix): removed
	(gnm_plugin_get_textdomain): new

2002-07-27  Zbigniew Chyla  <cyba@gnome.pl>

	* src/gutils.c:
	Converted g_string_[s]list_copy to more general functions,
	g_[s]list_map.

	* src/gutils.h:
	(g_[s]list_map): New
	(g_[s]tring_list_copy): Converted to macro (using g_[s]list_map)
	(g_list_to_vector, g_list_to_vector_custom, g_vector_free_custom,
	g_slist_to_vector):
	Removed
	(GNM_[S]LIST_SORT): New members of GNM_[S]LIST_* family.
	(GNM_SIZEOF_ARRAY): New macro

	* src/error-info.h:
	(GNM_INIT_RET_ERROR_INFO):
	New macro, I plan to add some extra code here.

	* src/plugin-service.[ch]
	PluginService and PluginService* are GObjects now
	(with three virtual methods: read_xml, activate, deactivate).
	All implementation details are hidden. Every PluginService* exposes
	only service-specific PluginService*Callbacks struct (returned by
	plugin_service_get_cbs function) for use by plugin loaders.
	Placed "id" attribute in PluginService struct instead of
	duplicating it in other structs.
	(plugin_service_{get,set,clear}_loader_data): Removed
	s/plugin_service_read/plugin_service_new/

	* src/plugin.c